<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DNA Manipulator</string>
    <string name="options">Options</string>
    <string name="credits">Credits</string>
    <string name="tutorial">Tutorial</string>
    <string name="referencetable">Reference Table</string>
    <string name="ribosome">Ribosome Translation (Level 3)</string>
    <string name="dnapolymerase">DNA Polymerase Replication (Level 1)</string>
    <string name="rnapolymerase">RNA Polymerase Transcription (Level 2)</string>
    <string name="play">Play</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="placeholder">null</string>
    <string name="level1">DNA Polymerase Replication</string>
    <string name="level2">RNA Polymerase Transcription</string>
    <string name="level3">Ribosome Translation</string>
    <string name="timer">0:00</string>
    <string name="score">SCORE: 0</string>
</resources>

